--- a/translations/fr/LC_MESSAGES/messages.po
+++ b/translations/fr/LC_MESSAGES/messages.po
@@ -49,7 +49,8 @@ msgstr ""
 msgid ""
 "<strong>What's possible</strong> if we let go of traditional partnership "
 "models in global development?"
-msgstr ""
+msgstr "Qu’est-ce que ça pourrait vouloir dire que de repenser comment "
+"nous développons nos leaders pour un développement mondial?"
 
 #: templates/splash.html:27
 msgid ""
